cmake_minimum_required(VERSION 3.2)
#SET(PROJECT_ROOT_PATH "${CMAKE_SOURCE_DIR}/")
#SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/bin/")
#SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/lib/")
ADD_SUBDIRECTORY(src bin)
#ADD_SUBDIRECTORY(build)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
#ADD_SUBDIRECTORY(src bin)
#add_executable(miniServer ${DIR_SRCS} server/header_file.h)