PROJECT(miniServer)

SET (CMAKE_CXX_COMPILER             "/usr/bin/g++")
SET (CMAKE_CXX_FLAGS "-std=c++11 -g")
#SET (CMAKE_CXX_FLAGS "-std=c++11 ")
# SET (CMAKE_CXX_FLAGS_DEBUG          "-g")
#  SET (CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
#  SET (CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG")
#  SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
#ADD_SUBDIRECTORY(base)
#ADD_SUBDIRECTORY(util)
#LINK_DIRECTORIES(/usr/include/c++/v1/)
SET(THIRD_LIB_PATH "/home/jc/Library/jcommon;/home/jc/Library/boost/stage/lib")

#FIND_LIBRARY(REF_LIBRARY NAMES  log4cpp  jcommon HINTS ${THIRD_LIB_PATH} PATH_SUFFIXES  NO_DEFAULT_PATH)
MESSAGE(${THIRD_LIB_PATH})
INCLUDE_DIRECTORIES(../include/ ~/Library/boost)
LINK_DIRECTORIES(~/Library/boost/stage/lib ~/Library/jcommon)
AUX_SOURCE_DIRECTORY(base DIR_SRCS)
AUX_SOURCE_DIRECTORY(util DIR_SRCS_UTIL)
ADD_DEFINITIONS(-DLOGON)
ADD_EXECUTABLE(miniServer main.cpp ${DIR_SRCS} ${DIR_SRCS_UTIL})
TARGET_LINK_LIBRARIES(miniServer  pthread  log4cpp  jcommon)
#TARGET_LINK_LIBRARIES(miniServer c++  /usr/local/lib/liblog4cpp.so.5)${REF_LIBRARY}